fix footer, add select service, change scrolloverflow.min.js

--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -13,16 +13,18 @@ footer
     bottom: 30px
     width: 100%
     p
-      font-size: 10px
+      font-size: 14px
       text-transform: uppercase
       color: #fff
       font-weight: 700
       font-family: $robotoFont
       opacity: 0.8
+      margin: 0
     
     .container
       display: flex
       justify-content: space-between
+      align-items: center
       .mobile-navi__socials
         margin: 0
         &:before
