--- a/src/components/homepage/_homepage.sass
+++ b/src/components/homepage/_homepage.sass
@@ -315,6 +315,17 @@
       &:nth-child(3)
         order: 4
 
++r($md)
+  .service
+
+    &__grid
+      display: flex
+      height: 100%
+
+    &__item
+      height: auto
+      
+
 .contacts
   &__contacts-bg
     position: absolute
