--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -3,7 +3,7 @@
 .input-container
   margin-top: 50px
   position: relative
-  z-index: 1
+  // z-index: 1
   &__floating-label
     position: absolute
     top: 10px
@@ -96,6 +96,7 @@
   font-size: 12px
   transform: translateX(-50%)
   color: $colorRed
+  width: 100%
 
 +r($md)
   .input-container
@@ -118,6 +119,9 @@
       height: 72px
       max-height: 72px
       overflow: hidden
+    &__floating-label
+      top: 6px
+      font-size: 11px
   
 // WORKS KIND OF bootstrap - group have label and input
 // .ui-group
